added login and signup forms

--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,1 +1,7 @@
-<p>login</p>
+<div id="login_signup_area" class='container'>
+    <%= render partial: 'toc_area' %>
+    <div class="divider"></div>
+    <%= render partial: 'login_area' %>
+    <div class="divider"></div>
+    <%= render partial: 'signup_area' %>
+</div>
