--- a/app/views/home/_login_area.html.erb
+++ b/app/views/home/_login_area.html.erb
@@ -1,6 +1,6 @@
 <div id='login_area' class='row'>
     <h3 class="center">Login</h3>
-    <%= render partial: 'login_signup_errors' %>
+    <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'login_signup_error_row' } %>
     <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'login_username', :vmodel => 'username'} %>
     <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'login_password', :vmodel => 'password', :type => 'password'} %>
     <div class='center-align'>
