--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,6 +1,12 @@
 <div id="login_signup_area" class='container'>
-    <%= render partial: 'toc_area' %>
-    <div class="divider"></div>
+    <div class="row">
+        <div class="col s12">
+            <ul class="tabs">
+                <li class="tab col s6"><a class="active" href="#login_area">Login</a></li>
+                <li class="tab col s6"><a href="#signup_area">Sign Up</a></li>
+            </ul>
+        </div>
+    </div>
     <%= render partial: 'login_area' %>
     <div class="divider"></div>
     <%= render partial: 'signup_area' %>
