--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>RailsForRails</title>
-    <%= csrf_meta_tags %>
-  </head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>RailsForRails</title>
+        <%= csrf_meta_tags %>
+    </head>
 
-  <body>
-    <%= yield %>
+    <body>
+        <%= render :partial => "partials/header" %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </body>
+        <%= yield %>
+
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </body>
+
+    <footer>
+        <div class="center-align" id="footer">
+            <%= render partial: 'partials/footer' %>
+        </div>
+    </footer>
 </html>
