--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,15 @@
  */
 
 $primary-color: #F365c0;
+$secondary-color: #F365c0;
+$primary-color-light: #f48fb1;
+$secondary-color: #c51162;
+$success-color: #00c853;
+$error-color: #ef5350;
+$link-color: #039be5;
+
 @import "materialize";
+
+.error-text {
+  color: $error-color;
+}
