--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,6 +1,6 @@
 <div id="login_signup_area" class='container'>
     <div class="row">
-        <div class="col s12">
+        <div class="col s10 offset-s1">
             <ul class="tabs">
                 <li class="tab col s6"><a class="active" href="#login_area">Login</a></li>
                 <li class="tab col s6"><a href="#signup_area">Sign Up</a></li>
@@ -8,6 +8,5 @@
         </div>
     </div>
     <%= render partial: 'login_area' %>
-    <div class="divider"></div>
     <%= render partial: 'signup_area' %>
 </div>
