--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,6 +1,8 @@
-<div class="footer-copyright">
-    <div class="container">
-        Webmaster: <%= mail_to("jkufro@andrew.cmu.edu", "Justin Kufro", encode: "javascript") %>
-        &nbsp;&nbsp;&copy 2018
+<footer>
+    <div class="footer-copyright center-align">
+        <div class="container">
+            Webmaster: <%= mail_to("jkufro@andrew.cmu.edu", "Justin Kufro", encode: "javascript") %>
+            &nbsp;&nbsp;&copy 2018
+        </div>
     </div>
-</div>
+</footer>
