--- a/app/views/home/_login_area.html.erb
+++ b/app/views/home/_login_area.html.erb
@@ -1,7 +1,7 @@
 <div id='login_area' class='row'>
     <h3 class="center">Login</h3>
     <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'login_signup_error_row' } %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'login_username', :vmodel => 'username'} %>
+    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'login_username', :vmodel => 'username', :label => 'email or username'} %>
     <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'login_password', :vmodel => 'password', :type => 'password'} %>
     <div class='center-align'>
         <button class='waves-effect waves-light btn btn-submit' v-on:click="submit_login()">Login</button>
