--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="page-footer">
     <div class="footer-copyright center-align">
         <div class="container">
             Webmaster: <%= mail_to("jkufro@andrew.cmu.edu", "Justin Kufro", encode: "javascript") %>
