progress on main page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-<p>hello!</p>
+<div id="main_area" class='container'>
+    <div class="row">
+        <%= render partial: 'current_queues' %>
+        <%= render partial: 'rides' %>
+    </div>
+</div>
+
