only show logout button if logged in

--- a/app/views/partials/_logout_button.html.erb
+++ b/app/views/partials/_logout_button.html.erb
@@ -1,3 +1,5 @@
-<ul id="logout_button" class="right clickable">
-    <li><i class="material-icons">exit_to_app</i></li>
-</ul>
+<% if logged_in? %>
+    <ul id="logout_button" class="right clickable">
+        <li><i class="material-icons">exit_to_app</i></li>
+    </ul>
+<% end %>
