progress on queue concelling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,13 @@ $link-color: #039be5;
 .clickable {
   cursor: pointer;
 }
+
+.queue_more_vert_wrapper {
+
+}
+
+.queue_more_vert {
+    font-size: 2rem;
+}
+
+.no-margin-bottom {margin-bottom:0px !important}
