--- a/app/views/templates/_current_queue_template.html.erb
+++ b/app/views/templates/_current_queue_template.html.erb
@@ -3,10 +3,13 @@
     <div class='col s12 card-content'>
         <div class='row valign-wrapper left-align no-margin-bottom'>
             <div class='col s10'>
-                <p class='flow-text '>{{ park_pass.first_name }} for {{ park_pass.current_queue.ride_name }}: {{ park_pass.current_queue.expected_wait }} minute(s)</p>
+                <p class='flow-text truncate'>{{ park_pass.first_name }} for {{ park_pass.current_queue.ride_name }}: {{ park_pass.current_queue.expected_wait }} minute(s)</p>
             </div>
             <div class='col s2 queue_more_vert_wrapper' :id="park_pass.current_queue.security_code">
                 <i class="material-icons center-align valign-wrapper queue_more_vert">more_vert</i>
+            </div>
+            <div class='right'>
+                <a class="waves-effect waves-light btn" :id="park_pass.current_queue.security_code">Remove</a>
             </div>
         </div>
     </div>
