--- a/app/views/templates/_ride_template.html.erb
+++ b/app/views/templates/_ride_template.html.erb
@@ -1,3 +1,17 @@
 <script type="text/x-template" id="ride-template">
-    <p>{{ ride.ride_name }}</p>
+<div class='row card'>
+    <div class='col s12 card-content'>
+        <div class='row valign-wrapper left-align no-margin-bottom'>
+            <div class='col s8'>
+                <p class='flow-text truncate'>{{ ride.ride_name }}</p>
+            </div>
+            <div class='col s4'>
+                <p class='flow-text truncate'>Wait: {{ ride.expected_wait_time }} minutes</p>
+            </div>
+        </div>
+    </div>
+</div>
 </script>
+
+
+
