--- a/app/views/templates/_ride_template.html.erb
+++ b/app/views/templates/_ride_template.html.erb
@@ -1,5 +1,5 @@
 <script type="text/x-template" id="ride-template">
-<div class='row card'>
+<div class='row card no-margin-bottom no-margin-top'>
     <div class='col s12 card-content'>
         <div class='row valign-wrapper left-align no-margin-bottom'>
             <div class='col s8'>
