--- a/app/views/templates/_current_queue_template.html.erb
+++ b/app/views/templates/_current_queue_template.html.erb
@@ -2,8 +2,11 @@
 <div class='row card no-margin-bottom no-margin-top' :id="park_pass.current_queue.security_code">
     <div class='col s12 card-content'>
         <div class='row valign-wrapper left-align no-margin-bottom'>
-            <div class='col s10 queue_summary_wrapper'>
-                <p class='flow-text truncate'><span class="queue_code_text" v-bind:class="{ ready_queue: is_ready }">{{ park_pass.current_queue.queue_code }} </span>{{ queue_context_text() }}<span class='queue_wait_text' v-bind:class="{ ready_queue: is_ready }">{{ queue_wait_text() }} </span></p>
+            <div class='col s3 queue_summary_wrapper'>
+                <p class='flow-text truncate'><span class='queue_wait_text' v-bind:class="{ ready_queue: is_ready() }">{{ queue_wait_text() }} </span></p>
+            </div>
+            <div class='col s7 queue_summary_wrapper'>
+                <p class='flow-text truncate'>{{ queue_context_text() }}</p>
             </div>
             <div class='col s2 queue_more_vert_wrapper'>
                 <i class="material-icons center-align valign-wrapper queue_more_vert">more_vert</i>
@@ -13,6 +16,11 @@
             </div>
         </div>
 
+        <div class='queue_details row valign-wrapper center-align no-margin-bottom'>
+            <div class='col s12'>
+                <p class='flow-text'><span class="queue_code_text" v-bind:class="{ ready_queue: is_ready() }">{{ park_pass.current_queue.queue_code }} </span></p>
+            </div>
+        </div>
         <div class='queue_details row valign-wrapper center-align no-margin-bottom'>
             <div class='col s12'>
                 <p class='flow-text'>{{ park_pass.current_queue.security_code }}</p>
