--- a/app/views/templates/_ride_template.html.erb
+++ b/app/views/templates/_ride_template.html.erb
@@ -1,14 +1,24 @@
 <script type="text/x-template" id="ride-template">
-<div class='row card no-margin-bottom no-margin-top'>
+<div class='row card no-margin-bottom no-margin-top' :id="ride.ride_name.replace(' ', '-').replace('\'', '')">
     <div class='col s12 card-content'>
-        <div class='row valign-wrapper no-margin-bottom'>
+        <div class='row valign-wrapper no-margin-bottom ride_summary'>
             <div class='col s12'>
                 <h3 class='center-align truncate'>{{ ride.ride_name }}</h3>
             </div>
         </div>
         <div class='row no-margin-bottom'>
             <div class='col s12'>
-                <p class='center-align flow-text'>{{ ride.expected_wait_time }} minutes</p>
+                <p class='center-align flow-text ride_wait'>{{ ride.expected_wait_time }} minutes</p>
+            </div>
+        </div>
+
+        <div class='ride_details row valign-wrapper center-align no-margin-bottom'>
+            <div class='col s12'>
+                <div class='row'>
+                    <div class='col s12'>
+                        test
+                    </div>
+                </div>
             </div>
         </div>
     </div>
