--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,9 +32,7 @@ $link-color: #039be5;
   cursor: pointer;
 }
 
-.queue_more_vert_wrapper {
-
-}
+.queue_more_vert_wrapper { }
 
 .queue_more_vert {
     font-size: 2rem;
@@ -59,4 +57,9 @@ $link-color: #039be5;
 
 .ride_wait {
     font-size: 2em;
+}
+
+.ride_min_hieght {
+    position: absolute;
+    right: 2rem;
 }
