can get in line and fixed bug with showing ready queues

--- a/app/views/home/_rides.html.erb
+++ b/app/views/home/_rides.html.erb
@@ -1,5 +1,6 @@
 
 <div is='ride-row'
     v-for="ride in rides"
-    v-bind:ride="ride">
+    v-bind:ride="ride"
+    v-bind:park_passes="park_passes">
 </div>
