added refresh button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,3 +67,8 @@ $link-color: #039be5;
 .get_in_line_text {
     font-size: 2rem;
 }
+
+.top_icon {
+    margin-left: .5rem;
+    margin-right: .5rem;
+}
