--- a/app/views/partials/_logout_button.html.erb
+++ b/app/views/partials/_logout_button.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-    <ul id="logout_button" class="right clickable">
+    <ul id="logout_button" class="right clickable top_icon">
         <li><i class="material-icons">exit_to_app</i></li>
     </ul>
 <% end %>
