--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -2,6 +2,7 @@
     <nav>
         <div class="nav-wrapper">
             <a href="/index" class="brand-logo center">Rails For Rails</a>
+            <%= render partial: 'partials/refresh_button' %>
             <%= render partial: 'partials/logout_button' %>
         </div>
     </nav>
