fixed ride form checkboxes

--- a/app/views/partials/_matize_vue_checkbox.html.erb
+++ b/app/views/partials/_matize_vue_checkbox.html.erb
@@ -11,10 +11,8 @@
 
     <div class='col <%= cols %> offset-<%= offset %>'>
         <p>
-          <label>
-            <input type="checkbox" class="filled-in" v-model="<%= vmodel %>">
-            <span><%= label %></span>
-          </label>
+          <input id="<%= id %>" type="checkbox" class="filled-in" v-model="<%= vmodel %>">
+          <label for="<%= id %>"><%= label %></label>
         </p>
     </div>
 
