--- a/app/views/templates/_admin_ride_template.html.erb
+++ b/app/views/templates/_admin_ride_template.html.erb
@@ -60,6 +60,12 @@
                     <%= render partial: 'partials/matize_vue_checkbox', locals: {:id => 'allow_queue_field', :vmodel => 'ride.allow_queue', :label => 'Allow Queue', :cols => 's3', :offset => 's3', :row => false} %>
                     <%= render partial: 'partials/matize_vue_checkbox', locals: {:id => 'active_field', :vmodel => 'ride.active', :label => 'Active', :cols => 's3', :offset => 's1', :row => false} %>
                 </div>
+
+                <div class='row'>
+                    <div class='col s12'>
+                        <a class="waves-effect waves-light btn center" v-on:click="s()">Update Ride</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
