admin can now clear the queue

--- a/app/views/templates/_admin_ride_template.html.erb
+++ b/app/views/templates/_admin_ride_template.html.erb
@@ -55,6 +55,15 @@
 
                 <div class='row'>
                     <div class='col s12'>
+                        <a class="waves-effect waves-light btn center" v-on:click="clear_queue()">Clear Queue</a>
+                    </div>
+                </div>
+
+                <br/>
+                <br/>
+
+                <div class='row'>
+                    <div class='col s12'>
                         <h4>Edit Ride</h4>
                     </div>
                 </div>
