--- a/app/views/templates/_admin_ride_template.html.erb
+++ b/app/views/templates/_admin_ride_template.html.erb
@@ -1,7 +1,7 @@
 <script type="text/x-template" id="admin-ride-template">
 
 
-<div class='row card no-margin-bottom no-margin-top ride_card' :id="ride.ride_name.replace(' ', '-').replace('\'', '')">
+<div class='row card no-margin-bottom no-margin-top ride_card' :id="'ride-' + ride.id">
     <div class='col s12 card-content'>
         <div class='ride_card_summary'>
             <span class='ride_min_hieght flow-text'>
