partials partials partials

--- a/app/views/rides/_ride_image_for_card.html.erb
+++ b/app/views/rides/_ride_image_for_card.html.erb
@@ -1,3 +1,3 @@
-<div class="card-image waves-effect waves-block waves-light">
+<div class="card-image waves-effect waves-block waves-light" v-on:click="flip_expand_icon()">
     <img :src="ride.ride_image_url">
 </div>
