--- a/app/views/templates/_ride_template.html.erb
+++ b/app/views/templates/_ride_template.html.erb
@@ -2,46 +2,24 @@
 <div class='row card  no-margin-top ride_card' :id="'ride-' + ride.id">
     <%= render partial: 'rides/ride_image_for_card' %>
     <div class='col s12 card-content'>
-        <div class='ride_card_summary'>
-            <span class='ride_min_hieght flow-text'>{{ ride.min_height }}"</span>
-            <div class='row valign-wrapper no-margin-bottom ride_summary'>
-                <div class='col s12'>
-                    <h3 class='center-align truncate'>{{ ride.ride_name }}</h3>
-                </div>
-            </div>
+        <div class='ride_card_summary'  v-on:click="flip_expand_icon()">
+            <%= render partial: 'rides/ride_quick_info' %>
+
+            <%= render partial: 'rides/ride_name_row' %>
+
             <div class='row no-margin-bottom'>
-                <div class='col s12'>
-                    <p class='center-align flow-text ride_wait'>{{ ride.expected_wait_time }} minutes</p>
-                </div>
+                <%= render partial: 'rides/ride_details_expander_icons' %>
+                <%= render partial: 'rides/ride_expected_wait_time' %>
             </div>
         </div>
 
         <div class='ride_details row valign-wrapper center-align no-margin-bottom'>
             <div class='col s12'>
-                <div class='row'>
-                    <div class='col s12'>
-                        <p class='flow-text queue_code_text'>{{ ride.max_allowed_queue_code }}</p>
-                    </div>
-                </div>
-                <div class='row'>
-                    <div class='col s12'>
-                        <p class='flow-text'>{{ ride.ride_description }}</p>
-                    </div>
-                </div>
+                <%= render partial: 'rides/max_queue_code_row' %>
 
-                <div class='row' v-if="has_eligible_passes()">
-                    <div class='col s12'>
-                        <h5>Get In Line</h5>
-                    </div>
-                </div>
-                <div class='row' v-for="park_pass in park_passes" v-if="((park_pass.at_park) && (!park_pass.current_queue))">
-                    <div class='col s8 offset-s1'>
-                        <p class='flow-text get_in_line_text left-align'>{{ park_pass.first_name }} {{ park_pass.last_name }}</p>
-                    </div>
-                    <div class='col s3'>
-                        <a class="waves-effect waves-light btn" v-on:click="create_queue(park_pass.id)"><i class="material-icons">add</i></a>
-                    </div>
-                </div>
+                <%= render partial: 'rides/ride_description_row' %>
+
+                <%= render partial: 'rides/get_in_line_row' %>
             </div>
         </div>
     </div>
