--- a/app/views/rides/_call_queue_row.html.erb
+++ b/app/views/rides/_call_queue_row.html.erb
@@ -6,7 +6,10 @@
         </div>
         <div class='row'>
             <div class='col s12'>
-                <a class="waves-effect waves-light btn center" v-on:click="call_queue()">Call Queue</a>
+                <a class="waves-effect waves-light btn center" v-on:click="call_queue()">
+                    <i class="material-icons left">people</i>
+                    Call Queue
+                </a>
             </div>
         </div>
     </div>
