--- a/app/views/rides/_reset_max_queue_row.html.erb
+++ b/app/views/rides/_reset_max_queue_row.html.erb
@@ -1,5 +1,8 @@
 <div class='row'>
     <div class='col s12'>
-        <a class="waves-effect waves-light btn center" v-on:click="reset_queue()">Reset Max Queue</a>
+        <a class="waves-effect waves-light btn center" v-on:click="reset_queue()">
+            <i class="material-icons left">loop</i>
+            Reset Max Queue
+        </a>
     </div>
 </div>
