--- a/app/views/rides/_rider_check_in_row.html.erb
+++ b/app/views/rides/_rider_check_in_row.html.erb
@@ -9,7 +9,10 @@
         </div>
         <div class='row'>
             <div class='col s12'>
-                <a class="waves-effect waves-light btn center" v-on:click="check_in_rider()">Check In</a>
+                <a class="waves-effect waves-light btn center" v-on:click="check_in_rider()">
+                    <i class="material-icons left">beenhere</i>
+                    Check In
+                </a>
             </div>
         </div>
     </div>
