--- a/app/views/rides/_clear_queue_row.html.erb
+++ b/app/views/rides/_clear_queue_row.html.erb
@@ -1,5 +1,8 @@
 <div class='row'>
     <div class='col s12'>
-        <a class="waves-effect waves-light btn center" v-on:click="clear_queue()">Clear Queue</a>
+        <a class="waves-effect waves-light btn center" v-on:click="clear_queue()">
+            <i class="material-icons left">clear</i>
+            Clear Queue
+        </a>
     </div>
 </div>
