--- a/app/views/rides/_edit_ride_form.html.erb
+++ b/app/views/rides/_edit_ride_form.html.erb
@@ -1,31 +1,10 @@
-<div class='row no-margin-bottom'>
-    <div class='col s12'>
-        <h4>Edit Ride</h4>
-    </div>
-</div>
-
-<div class='row'>
-    <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'ride_error_row' } %>
-</div>
-
-<%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'ride_name_field', :vmodel => 'ride.ride_name', :label => '', :helper_text => 'Ride Name', :cols => 's4', :offset => 's4'} %>
-<%= render partial: 'partials/matize_vue_textarea', locals: {:id => 'ride_description_field', :vmodel => 'ride.ride_description', :label => '', :helper_text => 'Ride Description', :type => 'textarea'} %>
-<div class='row'>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'cart_occupancy_field', :vmodel => 'ride.cart_occupancy', :helper_text => 'Cart Occupancy', :label => '', :type => 'number', :cols => 's2', :row => false} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'carts_on_track_field', :vmodel => 'ride.carts_on_track', :helper_text => 'Carts On Track', :label => '', :type => 'number', :cols => 's2', :offset => 's0', :row => false} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'min_height_field', :vmodel => 'ride.min_height', :helper_text => 'Min Height', :label => '', :type => 'number', :cols => 's2', :offset => 's0', :row => false} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'ride_duration_field', :vmodel => 'ride.ride_duration', :helper_text => 'Ride Duration', :label => '', :type => 'number', :cols => 's2', :offset => 's0', :row => false} %>
-</div>
-
-<%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'ride_image_url_field', :vmodel => 'ride.ride_image_url', :label => '', :helper_text => 'Ride Image URL'} %>
-
-<div class='row'>
-    <%= render partial: 'partials/matize_vue_checkbox', locals: {:id => 'allow_queue_field', :vmodel => 'ride.allow_queue', :label => 'Allow Queue', :cols => 's3', :offset => 's3', :row => false} %>
-    <%= render partial: 'partials/matize_vue_checkbox', locals: {:id => 'active_field', :vmodel => 'ride.active', :label => 'Active', :cols => 's3', :offset => 's1', :row => false} %>
-</div>
+<%= render partial: 'rides/ride_form' %>
 
 <div class='row'>
     <div class='col s12'>
-        <a class="waves-effect waves-light btn center" v-on:click="update_ride()">Update Ride</a>
+        <a class="waves-effect waves-light btn center" v-on:click="update_ride()">
+            <i class="material-icons left">edit</i>
+            Update Ride
+        </a>
     </div>
 </div>
