accidentally removed title from edit ride form

--- a/app/views/rides/_edit_ride_form.html.erb
+++ b/app/views/rides/_edit_ride_form.html.erb
@@ -1,3 +1,9 @@
+<div class='row no-margin-bottom no-margin-top'>
+    <div class='col s12'>
+        <h4 class="no-margin-bottom no-margin-top">Edit Ride</h4>
+    </div>
+</div>
+
 <%= render partial: 'rides/ride_form' %>
 
 <div class='row'>
