--- a/app/views/rides/_ride_card_summary.html.erb
+++ b/app/views/rides/_ride_card_summary.html.erb
@@ -1,4 +1,4 @@
-<div class='ride_card_summary' v-on:click="flip_expand_icon()">
+<div class='ride_card_summary clickable' v-on:click="flip_expand_icon()">
     <%= render partial: 'rides/ride_quick_info' %>
 
     <%= render partial: 'rides/ride_name_row' %>
