--- a/app/views/templates/_current_queue_template.html.erb
+++ b/app/views/templates/_current_queue_template.html.erb
@@ -2,19 +2,17 @@
 <div class='row card no-margin-bottom no-margin-top' :id="park_pass.current_queue.security_code">
     <div class='col s12 card-content'>
         <div class='row valign-wrapper left-align no-margin-bottom clickable'>
-            <div class='col s3 queue_summary_wrapper'>
+            <div class='col s4 queue_summary_wrapper' v-on:click="delete_open = false">
                 <p class='flow-text truncate'><span class='queue_wait_text' v-bind:class="{ ready_queue: park_pass.current_queue.is_ready }">{{ queue_wait_text() }} </span></p>
             </div>
-            <div class='col s6 queue_summary_wrapper'>
+            <div class='col s7 queue_summary_wrapper' v-on:click="delete_open = false">
                 <p class='flow-text truncate'>{{ queue_context_text() }}</p>
             </div>
-            <div class='col s3 queue_more_vert_wrapper'>
+            <div class='col s1 queue_more_vert_wrapper'>
                 <div class='row no-margin-bottom no-margin-top'>
                     <div class='col s6'>
-                        <i class="material-icons center-align valign-wrapper queue_more_vert clickable">more_vert</i>
-                    </div>
-                    <div class='col s6'>
-                        <i class="material-icons cancel_queue_button clickable" v-on:click="cancel_queue()">delete</i>
+                        <i class="material-icons center-align valign-wrapper queue_more_vert clickable" v-on:click="delete_open = true" v-if="!delete_open">more_vert</i>
+                        <i class="material-icons cancel_queue_button clickable" v-on:click="cancel_queue()" v-if="delete_open">delete</i>
                     </div>
                 </div>
             </div>
