started card for admin finding users

--- a/app/views/home/admin_area.html.erb
+++ b/app/views/home/admin_area.html.erb
@@ -1,4 +1,8 @@
 <div id="admin_area" class='container'>
+    <new-user-card></new-user-card>
+    <br/>
+    <existing-user-card></existing-user-card>
+    <br/>
     <new-ride-card></new-ride-card>
     <br/>
     <%= render partial: 'admin_rides' %>
