--- a/app/views/partials/_templates.html.erb
+++ b/app/views/partials/_templates.html.erb
@@ -1,6 +1,8 @@
 <% if is_admin? %>
 <%= render partial: 'templates/admin_ride_template' %>
 <%= render partial: 'templates/new_ride_card_template' %>
+<%= render partial: 'templates/new_user_card_template' %>
+<%= render partial: 'templates/existing_user_card_template' %>
 <% elsif logged_in? %>
 <%= render partial: 'templates/ride_template' %>
 <%= render partial: 'templates/current_queue_template' %>
