--- a/app/views/home/_signup_area.html.erb
+++ b/app/views/home/_signup_area.html.erb
@@ -1,11 +1,8 @@
 <div id='signup_area' class='row'>
     <h4 class="center">Sign Up</h4>
-    <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'login_signup_error_row' } %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'signup_username', :vmodel => 'username'} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'signup_email', :vmodel => 'email'} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'signup_phone', :vmodel => 'phone'} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'signup_password', :vmodel => 'password', :type => 'password'} %>
-    <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'signup_password_confirmation', :vmodel => 'password_confirmation', :type => 'password'} %>
+
+    <%= render partial: 'users/user_form', locals: { :id_prefix => 'new' } %>
+
     <div class='center-align'>
         <button class='waves-effect waves-light btn btn-submit' v-on:click="submit_signup()">Sign Up</button>
     </div>
