made progress on find user card

--- a/app/views/users/_find_user_by_username_autocomplete.html.erb
+++ b/app/views/users/_find_user_by_username_autocomplete.html.erb
@@ -2,7 +2,7 @@
     <div class="col s12">
         <div class="row no-margin-bottom">
             <div class="input-field col s6 offset-s3">
-                <input type="text" :id="autocomplete_username" class="autocomplete" v-model="autocomplete_username" v-on:keyup.enter="get_user()">
+                <input type="text" id="autocomplete_username" class="autocomplete" v-model="autocomplete_username" v-on:keyup.enter="get_user()">
                 <label for="autocomplete-input">Username</label>
             </div>
         </div>
