--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -11,7 +11,7 @@
     <div class='row'>
         <div class="input-field col s4 offset-s2">
             <select v-model="role" id="<%= id_prefix %>_user_role">
-              <option value="" disabled selected></option>
+              <option value="" disabled></option>
               <option value="admin">Admin</option>
               <option value="visitor">Visitor</option>
             </select>
