auto set card expirations

--- a/app/views/templates/_existing_user_card_template.html.erb
+++ b/app/views/templates/_existing_user_card_template.html.erb
@@ -26,7 +26,10 @@
                                 <%= render partial: 'users/existing_user_form' %>
                             </div>
                         </div>
+
                         <%= render partial: 'users/delete_user_row' %>
+
+                        <%= render partial: 'park_passes/existing_user_new_park_pass_area' %>
                     </div>
                 </div>
             </div>
