--- a/app/views/partials/_templates.html.erb
+++ b/app/views/partials/_templates.html.erb
@@ -3,6 +3,7 @@
 <%= render partial: 'templates/new_ride_card_template' %>
 <%= render partial: 'templates/new_user_card_template' %>
 <%= render partial: 'templates/existing_user_card_template' %>
+<%= render partial: 'templates/existing_user_new_park_pass_template' %>
 <% elsif logged_in? %>
 <%= render partial: 'templates/ride_template' %>
 <%= render partial: 'templates/current_queue_template' %>
