--- a/app/views/templates/_existing_user_new_park_pass_template.html.erb
+++ b/app/views/templates/_existing_user_new_park_pass_template.html.erb
@@ -1,3 +1,4 @@
+<script type="text/x-template" id="existing-user-new-park-pass-template">
 <div class="row" id='existing_user_new_park_pass_area'>
     <div class="col s12">
         <div class='row no-margin-bottom'>
@@ -21,3 +22,4 @@
         </div>
     </div>
 </div>
+</script>
