--- a/app/views/park_passes/_park_pass_form.html.erb
+++ b/app/views/park_passes/_park_pass_form.html.erb
@@ -1,6 +1,6 @@
 <% id_prefix ||= '' %>
 
-<%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'ride_error_row' } %>
+<%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'error_row' } %>
 
 <div class='row'>
     <div class="input-field col s8 offset-s2">
