--- a/app/views/rides/_ride_form.html.erb
+++ b/app/views/rides/_ride_form.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-    <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'ride_error_row' } %>
+    <%= render partial: 'partials/vue_error_rows', locals: {:is_component => 'error_row' } %>
 </div>
 
 <%= render partial: 'partials/matize_vue_form_element', locals: {:id => 'ride_name_field', :vmodel => 'ride.ride_name', :label => '', :helper_text => 'Ride Name', :cols => 's4', :offset => 's4'} %>
